--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "axios": "^0.27.2",
     "firebase": "^9.8.4",
     "javascript-time-ago": "^2.5.7",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.40",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.2",
     "react-redux": "^8.0.2",
     "react-redux-firebase": "^3.11.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-time-ago": "^7.2.1",
     "react-twitter-embed": "^4.0.4",
     "react-uuid": "^1.0.2",
